Updated landing and information page image styling, Increased feedback modal z-index and overflow scroll fix, Fixed header menu trigger icon

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -29,7 +29,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 999;
+    z-index: 19;
     overflow: auto;
   }
 
@@ -164,7 +164,7 @@
 }
 
 .nav-trigger {
-  display: flex;
+  display: none;
   align-items: center;
   margin: pxtorem(4) 0;
   padding: 0;
@@ -174,6 +174,10 @@
 
   @include for-tablet-landscape-down {
     align-self: flex-start;
+  }
+
+  @include for-tablet-portrait-down {
+    display: flex;
   }
 
   &--button {
@@ -199,11 +203,11 @@
     }
   }
 
-  i {
+  svg {
     display: inline-block;
     vertical-align: middle;
-    margin-left: space(12);
-    font-size: pxtorem(22);
+    margin-left: space(8);
+    font-size: pxtorem(20);
   }
 
   &.active {
