--- a/src/views/Page/InformationPage.scss
+++ b/src/views/Page/InformationPage.scss
@@ -87,6 +87,8 @@
 }
 
 .information-page__image {
+  width: 100%;
+  height: auto;
   margin-bottom: space(64);
   border-radius: 40px;
   overflow: hidden;
