--- a/src/views/Page/LandingPage.scss
+++ b/src/views/Page/LandingPage.scss
@@ -101,6 +101,8 @@
 }
 
 .landing-page__image {
+  width: 100%;
+  height: auto;
   margin-bottom: space(32);
   border-radius: 40px;
 
